TODO: Imagens com redirects

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 	<img src="//lorempixel.com/500/500">
 
+	<!--
+		TODO: Verificar na aba network os redirects que a imagem acima faz
+		e diminuir a quantidade de redirects
+
+		Dica: status 301 Moved Permanently
+	-->
+
 	<script>
 		document.addEventListener('DOMContentLoaded', onDOMContentLoaded)
 
