Exercicio 6: Adicionar uma String de elemento(s)

--- a/index.html
+++ b/index.html
@@ -10,19 +10,11 @@
 	</script>
 </head>
 <body>
-
 	<div class="container">
 		<h1>Olá!</h1>
 	</div>
 
-	<img src="//lorempixel.com/500/500">
-
-	<!--
-		TODO: Verificar na aba network os redirects que a imagem acima faz
-		e diminuir a quantidade de redirects
-
-		Dica: status 301 Moved Permanently
-	-->
+	<img src="//lorempixel.com/500/500/">
 
 	<script>
 		document.addEventListener('DOMContentLoaded', onDOMContentLoaded)
@@ -30,12 +22,17 @@
 		function onDOMContentLoaded (event) {
 			var container = document.querySelector('.container')
 
-			container.innerText = ''
+			var html = '<h1>Olá, eu era uma String fofinha!</h1>'
 
-			var element = document.createElement('h1')
-			element.innerText = 'Olá, JavaScript me criou!'
+			container.insertAdjacentHTML('beforebegin', html)
+			/*
+			Elementos
+				<!-- beforebegin -->
+				<div><!-- afterbegin --> conteudo <!-- beforeend --></div>
+				<!-- afterend -->
 
-			container.appendChild(element)
+				https://developer.mozilla.org/pt-BR/docs/Web/API/Element/insertAdjacentHTML
+			 */
 		}
 	</script>
 </body>
