--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+		.js h1 {
+			opacity: 0;
+			transform: translateX(-100px);
+		}
+
+		.entering {
+			animation: entering 300ms cubic-bezier(0.18, 0.89, 0.32, 1.28) forwards;
+		}
+
+		@keyframes entering {
+			from: {
+				opacity: 0;
+				transform: translateX(-100px);
+			}
+
+			to {
+				opacity: 1;
+				transform: translateX(0);
+			}
+		}
+	</style>
 </head>
 <body>
 	<div class="container">
@@ -19,6 +41,8 @@
 	<img src="//lorempixel.com/500/500/">
 
 	<script>
+		document.body.classList.add('js')
+
 		document.addEventListener('DOMContentLoaded', onDOMContentLoaded)
 
 		function onDOMContentLoaded (event) {
@@ -26,6 +50,10 @@
 
 			Array.prototype.slice.call(h1List).map(function (element, index) {
 				element.innerText = index + ' ' + element.innerText
+
+				setTimeout(function () {
+					element.classList.add('entering')
+				}, 100 * index)
 			})
 		}
 	</script>
