Corrige http para funcionar no GitHub pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div data-container></div>
 
-	<img src="//lorempixel.com/500/500/">
+	<img src="http://lorempixel.com/500/500/">
 
 	<script src="index.js"></script>
 </body>
